Fix resetting active tool when moving layers above vector layers

Perhaps we should make this system a bit more robust... Right now
a few active node switches happen when one moves a layer. If the
user had some tool activated, it may be reset in the meantime,
which is not very desirable.

BUG:398095