libs/ui/kis_node_manager.cpp
@@ -665,10 +665,6 @@ void KisNodeManager::slotUiActivatedNode(KisNodeSP node)
         node = 0;
     }
 
-    if (node == activeNode()) return;
-
-    slotSomethingActivatedNodeImpl(node);
-
     if (node) {
         QStringList vectorTools = QStringList()
                 << "InteractionTool"
@@ -699,6 +695,10 @@ void KisNodeManager::slotUiActivatedNode(KisNodeSP node)
             }
         }
     }
+
+    if (node == activeNode()) return;
+
+    slotSomethingActivatedNodeImpl(node);
 }
 
 void KisNodeManager::nodesUpdated()
